src/snapshots/jj_pr__tests__base_mismatch_sync.snap
---
source: src/tests.rs
assertion_line: 451
expression: plan_sync(&f)
---
push: #2 (feat-b)
  update #2 title -> "b"
update #2 (feat-b) base -> feat-a
