src/snapshots/jj_pr__tests__bookmark_name_collision_no_remote.snap
---
source: src/tests.rs
expression: plan_sync(&f)
---
stamp #42 trailer on ch1
push: #42 (fix-typo)
